[gd_scene load_steps=5 format=3 uid="uid://weapon_test_lab"]

[ext_resource type="Script" path="res://tools/weapon_test_lab/weapon_test_lab.gd" id="1_lab"]
[ext_resource type="Script" path="res://tools/weapon_test_lab/weapon_test_ui.gd" id="2_ui"]
[ext_resource type="Script" path="res://tools/weapon_test_lab/grid_drawer.gd" id="3_grid"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ship"]
radius = 16.0

[node name="WeaponTestLab" type="Node2D"]
script = ExtResource("1_lab")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="GridLines" type="Node2D" parent="."]
z_index = -10
script = ExtResource("3_grid")

[node name="TestShip" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="ShipVisual" type="Polygon2D" parent="TestShip"]
color = Color(0.2, 0.8, 1, 1)
polygon = PackedVector2Array(20, 0, -15, -12, -10, 0, -15, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestShip"]
shape = SubResource("CircleShape2D_ship")

[node name="AimLine" type="Line2D" parent="TestShip"]
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
default_color = Color(1, 1, 1, 0.3)

[node name="TargetContainer" type="Node2D" parent="."]

[node name="WeaponTestUI" type="CanvasLayer" parent="."]
script = ExtResource("2_ui")

[node name="CrosshairContainer" type="CanvasLayer" parent="."]
layer = 50

[node name="Crosshair" type="TextureRect" parent="CrosshairContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
